plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.6'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.discord_bot.backend'
version = '0.0.1-SNAPSHOT'

bootJar {
    archiveBaseName = "lalabot"
    archiveVersion = "0.0.1-SNAPSHOT"
}

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()

    maven {
        url 'https://m2.dv8tion.net/releases'

    }
    maven {
        url 'https://maven.lavalink.dev/releases'
    }
    maven {
        url 'https://jitpack.io'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    //jda
    implementation 'net.dv8tion:JDA:6.1.3'
    //musicPlayer
    implementation 'dev.arbjerg:lavalink-client:3.4.0'
    implementation 'com.google.http-client:google-http-client-jackson2:1.41.0'
    implementation 'com.google.apis:google-api-services-youtube:v3-rev20250101-2.0.0'
    //mysql
    runtimeOnly 'com.mysql:mysql-connector-j'
    //gemini
    implementation 'com.google.genai:google-genai:1.6.0'
    //kafka
    implementation 'org.springframework.kafka:spring-kafka'
    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    //springboot monitoring
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    implementation 'com.squareup.okhttp3:okhttp:4.12.0'

    implementation 'org.json:json:20240303'
    implementation 'org.apache.httpcomponents:httpclient'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}

tasks.named('test') {
    useJUnitPlatform()
}
